2006-03-03  Per Bothner  <per@bothner.com>

	* numbers.scm (duration): New function.

2006-02-14  Per Bothner  <per@bothner.com>

	* prim_syntax.scm (define-syntax, define, define-private,
	define-constant): Recognize "compound names" - ($lookup$ PART1 'PART2),
	which appeared as PART1:PART2 is the source code.
	(define_for_syntax): Just define in terms of define, for now.

2006-02-10  Per Bothner  <per@bothner.com>

	* number.scm (max, min, gcd, lcm, logand, logior, logxor):
	Use more convenient array:length syntax.

	* numbers.scm (number->string): Use new Arithmetic:toString function,
	which also support java.lang.Long, gnu.math.BigDecimal, etc.

2006-02-07  Per Bothner  <per@bothner.com>

	* numbers.scm (integer?, max, min, gcd, lcm, logand, logior, logxor):
	Rewrite from Java to Scheme, now that array operations are less tedious.

	* lists.scm (set-car!): Use new syntax.

2006-02-02  Per Bothner  <per@bothner.com>

	* misc.scm (namespace): New function.

2006-01-10  Per Bothner  <per@bothner.com>

	* files.scm (resource-uri): New syntax.
	(module-uri): Fix typo.

2006-01-07  Per Bothner  <per@bothner.com>

	* files.scm (URI): Give specific <URI> return type.
	(resolve-uri): New procedure.
	(module-uri): New macro.

2006-01-04  Per Bothner  <per@bothner.com>

	* files.scm (include-relative): Update to use URI_utils.

	* ports.scm (open-input-file, open-output-file, call-with-input-file,
	with-input-from-file, with-output-to-file): Generalize to use
	general path - specifically URIs - and the methods in URI_utils.

2006-01-02  Per Bothner  <per@bothner.com>

	* files.scm (URI): Update package for moved URI_utils class.

2005-12-31  Per Bothner  <per@bothner.com>

	* files.scm (URI): New procedure.

2005-11-23  Per Bothner  <per@bothner.com>

	* std_syntax.scm (generate-temporaries): New function.
	* std_syntax.scm (delay): Inline allocation of Promise.
	(%make-promise): Remove.
	* reflection.scm (primitive-constructor): New macro.