@@ -6,7 +6,6 @@ java_sources = \
 set_b.java \
 prim_method.java prim_throw.java throw_name.java \
 not.java \
-cxr.java \
 append.java \
 fluid_let.java \
 atan.java \
