@@ -171,34 +171,34 @@ public class Scheme extends LispLanguage
       defProcStFld("set-car!", "kawa.lib.lists");
       defProcStFld("set-cdr!", "kawa.lib.lists");
 
-      defProcStFld("caar", "kawa.standard.cxr");
-      defProcStFld("cadr", "kawa.standard.cxr");
-      defProcStFld("cdar", "kawa.standard.cxr");
-      defProcStFld("cddr", "kawa.standard.cxr");
-      defProcStFld("caaar", "kawa.standard.cxr");
-      defProcStFld("caadr", "kawa.standard.cxr");
-      defProcStFld("cadar", "kawa.standard.cxr");
-      defProcStFld("caddr", "kawa.standard.cxr");
-      defProcStFld("cdaar", "kawa.standard.cxr");
-      defProcStFld("cdadr", "kawa.standard.cxr");
-      defProcStFld("cddar", "kawa.standard.cxr");
-      defProcStFld("cdddr", "kawa.standard.cxr");
-      defProcStFld("caaaar", "kawa.standard.cxr");
-      defProcStFld("caaadr", "kawa.standard.cxr");
-      defProcStFld("caadar", "kawa.standard.cxr");
-      defProcStFld("caaddr", "kawa.standard.cxr");
-      defProcStFld("cadaar", "kawa.standard.cxr");
-      defProcStFld("cadadr", "kawa.standard.cxr");
-      defProcStFld("caddar", "kawa.standard.cxr");
-      defProcStFld("cadddr", "kawa.standard.cxr");
-      defProcStFld("cdaaar", "kawa.standard.cxr");
-      defProcStFld("cdaadr", "kawa.standard.cxr");
-      defProcStFld("cdadar", "kawa.standard.cxr");
-      defProcStFld("cdaddr", "kawa.standard.cxr");
-      defProcStFld("cddaar", "kawa.standard.cxr");
-      defProcStFld("cddadr", "kawa.standard.cxr");
-      defProcStFld("cdddar", "kawa.standard.cxr");
-      defProcStFld("cddddr", "kawa.standard.cxr");
+      defProcStFld("caar", "kawa.lib.lists");
+      defProcStFld("cadr", "kawa.lib.lists");
+      defProcStFld("cdar", "kawa.lib.lists");
+      defProcStFld("cddr", "kawa.lib.lists");
+      defProcStFld("caaar", "kawa.lib.lists");
+      defProcStFld("caadr", "kawa.lib.lists");
+      defProcStFld("cadar", "kawa.lib.lists");
+      defProcStFld("caddr", "kawa.lib.lists");
+      defProcStFld("cdaar", "kawa.lib.lists");
+      defProcStFld("cdadr", "kawa.lib.lists");
+      defProcStFld("cddar", "kawa.lib.lists");
+      defProcStFld("cdddr", "kawa.lib.lists");
+      defProcStFld("caaaar", "kawa.lib.lists");
+      defProcStFld("caaadr", "kawa.lib.lists");
+      defProcStFld("caadar", "kawa.lib.lists");
+      defProcStFld("caaddr", "kawa.lib.lists");
+      defProcStFld("cadaar", "kawa.lib.lists");
+      defProcStFld("cadadr", "kawa.lib.lists");
+      defProcStFld("caddar", "kawa.lib.lists");
+      defProcStFld("cadddr", "kawa.lib.lists");
+      defProcStFld("cdaaar", "kawa.lib.lists");
+      defProcStFld("cdaadr", "kawa.lib.lists");
+      defProcStFld("cdadar", "kawa.lib.lists");
+      defProcStFld("cdaddr", "kawa.lib.lists");
+      defProcStFld("cddaar", "kawa.lib.lists");
+      defProcStFld("cddadr", "kawa.lib.lists");
+      defProcStFld("cdddar", "kawa.lib.lists");
+      defProcStFld("cddddr", "kawa.lib.lists");
       defProcStFld("null?", "kawa.lib.lists");
       defProcStFld("list?", "kawa.lib.lists");
       defProcStFld("list", "gnu.kawa.functions.MakeList");
